# ingreedyents

./: .gitignore  CMakeLists.txt  README.md  build_app.sh  build_app_no_tests.sh  ingreedyents.yml  rebuild_app_only.sh  run_tests.sh  run_tests_no_build.sh
QtGUI/: QtGUI.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
app/: main.cpp
docs/: Doxyfile  _config.yml  index.md  mkpost.py
docs/_posts/: 2020-03-07-first-post.md  2020-03-12-post.md  2020-03-27-post.md  2020-06-18-post.md
include/: HTTPSGETter.h  Ingredient.h  IngredientRequest.h  IngredientResult.h  JSONErr.h  JSONFuncs.h  Measurement.h  Nutrient.h  Recipe.h  UPC_CLI.h  example.h  ingredient_result.h
src/: HTTPSGETter.cpp  Ingredient.cpp  IngredientRequest.cpp  IngredientResult.cpp  JSONErr.cpp  JSONFuncs.cpp  Measurement.cpp  Nutrient.cpp  Recipe.cpp  UPC_CLI.cpp  example.cpp  ingredient_result.cpp
tests/: Example_Test.cpp  IngredientResultTest.cpp  main.cpp
tests/data/: example_nutrient.json  ingredient_get_result.json  ingredient_nutrition_get_result.json  ingredient_search_get_result.json  marshmellow_fluff_ingredient.json
tests/include/: CURLTest.h  HTTPSGETterTest.h  IngredientRequestTest.h  IngredientResultTest.h  IngredientTest.h  JSONFuncsTest.h  MeasurementTest.h  NutrientTest.h  RecipeTest.h
